17687
def f(x: Byte, b: Boolean) = x
def f(x: Byte, b: Int) = x

f(4, true)

errors out with: 
Main.scala:5: error: overloaded method value f with alternatives:
  (x: Byte,b: Int)Byte <and>
  (x: Byte,b: Boolean)Byte
 cannot be applied to (Int, Boolean)
    f(4, true)
    ^
